@@ -4,6 +4,8 @@
 	values on exit (bug# 156304)
 	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Format properly 
 	while the file is still new
+	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Disable cache tab
+	if another agent is running (bug# 156305)
 	
 2004-10-23  Adam Schreiber <sadam@clemson.edu>
 
